--- a/LLLNNN/src/main/resource/db.properties
+++ b/LLLNNN/src/main/resource/db.properties
@@ -1,5 +1,8 @@
-db.url=
-db.login=
-db.password=
-db.databasename=
-db.driver=45
+db.url=jdbc:mysql://localhost/
+db.login="MJebori"
+db.password="mohsql69"
+db.databasename="artistorg"
+db.driver="com.mysql.cj.jdbc.Driver"
+
+
+ 
